// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./SecurityPanelView.stories AllPassing 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-l2lphb-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiBox-root mui-style-0"
    >
      <div
        class="MuiBox-root mui-style-0"
        style="opacity: 0;"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-63k1qp-MuiSkeleton-root"
          style="height: 120px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`./SecurityPanelView.stories CriticalIssue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-l2lphb-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiBox-root mui-style-0"
    >
      <div
        class="MuiBox-root mui-style-0"
        style="opacity: 0;"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-63k1qp-MuiSkeleton-root"
          style="height: 120px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`./SecurityPanelView.stories Loading 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-l2lphb-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiBox-root mui-style-0"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-63k1qp-MuiSkeleton-root"
        style="height: 120px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-63k1qp-MuiSkeleton-root"
        style="height: 200px;"
      />
      <span
        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-13wwyig-MuiSkeleton-root"
        style="height: 150px;"
      />
    </div>
  </div>
</div>
`;

exports[`./SecurityPanelView.stories WithIssues 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-l2lphb-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiBox-root mui-style-0"
    >
      <div
        class="MuiBox-root mui-style-0"
        style="opacity: 0;"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse mui-style-63k1qp-MuiSkeleton-root"
          style="height: 120px;"
        />
      </div>
    </div>
  </div>
</div>
`;
